--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "public"]
 	path = public
-	url = https://github.com/AdriaCalderer/adriacalderer.github.io.git
+	url = git@github.com:AdriaCalderer/adriacalderer.github.io.git
+#	url = https://github.com/AdriaCalderer/adriacalderer.github.io.git
