--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://caladria.net/'
+baseURL = 'http://adriacalderer.github.io/'
 languageCode = 'ca_ES'
 title = 'Ca l&apos;Adrià'
 theme = 'hugo-geekdoc'
@@ -52,7 +52,7 @@ enableRobotsTXT = true
 
   # (Optional, default none) Set source repository location. Used for 'Edit page' links.
   # You can also specify this parameter per page in front matter.
-  geekdocRepo = "https://github.com/thegeeklab/hugo"
+  geekdocRepo = "https://github.com/adriacalderer/blog"
 
   # (Optional, default none) Enable 'Edit page' links. Requires 'GeekdocRepo' param
   # and the path must point to the parent directory of the 'content' folder.
