--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = 'http://adriacalderer.github.io/'
 languageCode = 'ca_ES'
-title = 'Ca l&apos;Adrià'
+title = 'Ca lAdrià'
 theme = 'hugo-geekdoc'
 
 
@@ -44,20 +44,20 @@ enableRobotsTXT = true
 
   # (Optional, default true) Show page navigation links at the bottom of each
   # docs page (bundle menu only).
-  geekdocNextPrev = false
+  geekdocNextPrev = true
 
   # (Optional, default true) Show a breadcrumb navigation bar at the top of each docs page.
   # You can also specify this parameter per page in front matter.
-  geekdocBreadcrumb = false
+  geekdocBreadcrumb = true
 
   # (Optional, default none) Set source repository location. Used for 'Edit page' links.
   # You can also specify this parameter per page in front matter.
-  geekdocRepo = "https://github.com/adriacalderer/blog"
+  geekdocRepo = "https://github.com/adriacalderer"
 
   # (Optional, default none) Enable 'Edit page' links. Requires 'GeekdocRepo' param
   # and the path must point to the parent directory of the 'content' folder.
   # You can also specify this parameter per page in front matter.
-  geekdocEditPath = "edit/main/exampleSite"
+  geekdocEditPath = "blog"
 
   # (Optional, default true) Enables search function with flexsearch.
   # Index is built on the fly and might slow down your website.
