--- a/config.toml
+++ b/config.toml
@@ -57,7 +57,7 @@ enableRobotsTXT = true
   # (Optional, default none) Enable 'Edit page' links. Requires 'GeekdocRepo' param
   # and the path must point to the parent directory of the 'content' folder.
   # You can also specify this parameter per page in front matter.
-  geekdocEditPath = "blog"
+  geekdocEditPath = "blog/edit/main"
 
   # (Optional, default true) Enables search function with flexsearch.
   # Index is built on the fly and might slow down your website.
