--- a/themes/hugo-geekdoc/exampleSite/config/_default/params.yaml
+++ b/themes/hugo-geekdoc/exampleSite/config/_default/params.yaml
@@ -10,7 +10,7 @@ geekdocToC: 3
 geekdocTagsToMenu: true
 
 geekdocRepo: https://github.com/thegeeklab/hugo-geekdoc
-geekdocEditPath: edit/main/exampleSite
+geekdocEditPath: edit/main/blog
 
 geekdocSearch: true
 geekdocSearchShowParent: true
